# VibeGraph

./: .coverage  .gitignore  README.md  biome.json  check_languages.py  forlater.md  lefthook.yml  project.md  pyproject.toml  report.md  report_ai_test.md  ruff.toml  test_mcp_tools.py  test_multiparser.py  test_path_fix.py  ui.md  verify_api_response.py
.agent/rules/: code-style.md  mainrule.md
.agent/skills/codebase_test/: SKILL.md
.github/workflows/: ci.yml
plans/: improvement_plan.md
scripts/: fix_parser.py
src/indexer/: schema.sql
src/vibegraph/: __init__.py  server_api.py
src/vibegraph/indexer/: db.py  main.py  parser.py  resolver.py  schema.sql  watcher.py
src/vibegraph/mcp/: server.py
src/web/: package-lock.json  package.json
src/web/src/: App.css  App.tsx  index.css
tests/: test_api.py  test_gitignore.py  test_mcp.py  test_multiparser.py  test_parser.py
