[project]
name = "vibegraph"
version = "0.1.0"
description = "VibeGraph: The Nervous System MCP"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp>=1.2.0",
    "tree-sitter==0.21.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "tree-sitter-languages>=1.10.0",
    "watchdog>=6.0.0",
    "pathspec>=0.12.0",
]

[project.scripts]
vibegraph-mcp = "vibegraph.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["vibegraph"]

[dependency-groups]
dev = [
    "lefthook>=2.0.15",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", ".venv/"]
